--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "webpack": "^5.83.1",
+    "webpack-cli": "^5.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
